<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/text_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/weight"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="italic|bold" />

    <TextView
        android:id="@+id/textWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/text_weight"
        android:text="@string/hint_weight"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/text_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_weight"
        android:layout_marginStart="5dp"
        android:text="@string/height"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textWeight"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/text_height"
        android:text="@string/hint_height"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/text_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textHeight"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textHeight"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_toEndOf="@+id/text_time"
        android:text="@string/hint_birth_date"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="3sp"
        android:orientation="horizontal"
        tools:ignore="RelativeOverlap">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonEdit"
            style="@style/Widget.App.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:textSize="12sp"
            app:icon="@drawable/outline_edit_black_18" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDelete"
            style="@style/Widget.App.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:textSize="12sp"
            app:icon="@drawable/outline_delete_black_18"
            app:iconTint="@color/red" />
    </LinearLayout>
</RelativeLayout>