<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/setting_notification"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textTitle"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        android:text="@string/status"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="normal|italic" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchMaterial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textTitle"
        android:layout_toEndOf="@id/textStatus"
        android:checked="true"/>

    <TextView
        android:id="@+id/textTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textStatus"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/time_notify"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="normal|italic" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textStatus"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/textTime"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radCurrent"
            style="@style/Widget.App.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/current_day"
            android:textSize="18sp"
            android:textStyle="italic|normal" />

        <RadioButton
            android:id="@+id/radBefore"
            style="@style/Widget.App.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three_days_before"
            android:textSize="18sp"
            android:textStyle="italic|normal" />

    </RadioGroup>

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textTime"
        android:layout_marginStart="110dp"
        android:layout_marginTop="22dp"
        android:timePickerMode="spinner" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timePicker"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonBack"
            style="@style/Widget.App.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/timePicker"
            android:layout_marginEnd="10dp"
            android:text="@string/back"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSave"
            style="@style/Widget.App.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textAllCaps="false" />
    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>