<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/male" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:text="@string/full_name"
                android:textColor="@color/text_secondary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputFullName"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="3"
                android:hint="@string/hint_full_name"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/text_primary"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:text="@string/nick_name"
                android:textColor="@color/text_secondary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputNickName"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="3"
                android:hint="@string/hint_nick_name"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/text_primary"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:text="@string/gender"
                android:textColor="@color/text_secondary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/male"
                    android:textColor="@color/text_secondary"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textColor="@color/text_secondary"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:text="@string/birth_date"
                android:textColor="@color/text_secondary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:id="@+id/textBirthdate"
                    android:layout_width="0dp"
                    android:layout_height="33dp"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:text="@string/hint_birth_date"
                    android:textColor="@color/text_secondary"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights" />

                <ImageButton
                    android:id="@+id/imageCalendar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:src="@drawable/outline_insert_invitation_black_18"
                    tools:ignore="ContentDescription" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:text="@string/weight"
                android:textColor="@color/text_secondary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputWeight"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="3"
                android:hint="@string/hint_weight"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number|numberDecimal"
                android:textColor="@color/text_primary"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:text="@string/height"
                android:textColor="@color/text_secondary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputHeight"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="3"
                android:hint="@string/hint_height"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number|numberDecimal"
                android:textColor="@color/text_primary"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@drawable/background_button"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:visibility="gone" />
        </FrameLayout>


    </LinearLayout>

</ScrollView>